new reconcilation protocol

--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,19 @@
 {erl_opts, [
 ]}.
 
+{sub_dirs, [
+   "examples/eek"
+]}.
+
+{lib_dirs, []}.
 {cover_enabled, true}.
 
 {deps, [
    {datum, ".*",
      {git, "https://github.com/fogfish/datum", {branch, master}}
+   }
+
+  ,{feta, ".*",
+     {git, "https://github.com/fogfish/feta", {branch, master}}
    }
 ]}.
