--- a/rebar.config
+++ b/rebar.config
@@ -9,11 +9,17 @@
 {cover_enabled, true}.
 
 {deps, [
-   {datum, ".*",
-     {git, "https://github.com/fogfish/datum", {branch, master}}
-   }
+   datum,
 
-  ,{feta, ".*",
+   {pipe, ".*",
+     {git, "https://github.com/kfsm/pipe", {branch, master}}
+   },
+
+   {feta, ".*",
      {git, "https://github.com/fogfish/feta", {branch, master}}
-   }
+   },
+
+   {crdts, ".*",
+     {git, "https://github.com/fogfish/crdts", {branch, master}}
+   }   
 ]}.
