Split Vnode management from Routing

--- a/test/tests.config
+++ b/test/tests.config
@@ -1,10 +1,10 @@
 %%
 %% cluster
-{node, a, 'a@127.0.0.1'}.
-{node, b, 'b@127.0.0.1'}.
-{node, c, 'c@127.0.0.1'}.
-{node, d, 'd@127.0.0.1'}.
-{node, e, 'e@127.0.0.1'}.
+{node, a, 'a@localhost.localdomain'}.
+{node, b, 'b@localhost.localdomain'}.
+{node, c, 'c@localhost.localdomain'}.
+{node, d, 'd@localhost.localdomain'}.
+{node, e, 'e@localhost.localdomain'}.
 {init, all_nodes, [{node_start, [{callback_module, spawner}]}]}.
 
 %%
