--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,11 @@
 {cover_enabled, true}.
 
 {deps, [
-   datum,
+   % datum,
+
+   {datum, ".*",
+     {git, "https://github.com/fogfish/datum", {branch, 'fix-ring'}}
+   },
 
    {pipe, ".*",
      {git, "https://github.com/kfsm/pipe", {branch, master}}
