--- a/rebar.config
+++ b/rebar.config
@@ -1,19 +1,11 @@
 {erl_opts, [
 ]}.
 
-{sub_dirs, [
-   "examples/eek"
-]}.
-
 {lib_dirs, []}.
 {cover_enabled, true}.
 
 {deps, [
-   % datum,
-
-   {datum, ".*",
-     {git, "https://github.com/fogfish/datum", {branch, 'fix-ring'}}
-   },
+   datum,
 
    {pipe, ".*",
      {git, "https://github.com/kfsm/pipe", {branch, master}}
