--- a/rebar.config
+++ b/rebar.config
@@ -5,17 +5,14 @@
 {cover_enabled, true}.
 
 {deps, [
-   datum,
+   datum
+,  {pipe, "2.0.1", {pkg, pipes}}
 
-   {pipe, ".*",
-     {git, "https://github.com/kfsm/pipe", {branch, master}}
-   },
-
-   {feta, ".*",
+,  {feta, ".*",
      {git, "https://github.com/fogfish/feta", {branch, master}}
-   },
+   }
 
-   {crdts, ".*",
+,  {crdts, ".*",
      {git, "https://github.com/fogfish/crdts", {branch, master}}
    }   
 ]}.
